kubernetes-example/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weather-app-dev
spec: {}
status: {}
