kubernetes-example/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway
  name: gateway-dp
  namespace: weather-app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - image: ghcr.io/mkkl1/weather-station/hw-gateway@sha256:121a89e6c39a359f43ba5add5b161c3379c92d609a66692e882c6c0f6685d9cd
          name: hw-gateway
          ports:
            - containerPort: 8000
              name: api-port
          resources:
            limits:
              cpu: "500m"
              memory: "128Mi"
            requests:
              cpu: "100m"
              memory: "64Mi"
          volumeMounts:
            - name: keys-volume
              mountPath: /keys
              readOnly: true
      volumes:
        - name: keys-volume
          secret:
            secretName: ws-keys
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
  name: gateway-sv
  namespace: weather-app-dev
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: gateway
  type: ClusterIP
