kubernetes-example/provisioning-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: provisioning
  name: provisioning-dp
  namespace: weather-app-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: provisioning
  template:
    metadata:
      labels:
        app: provisioning
    spec:
      containers:
        - image: ghcr.io/mkkl1/weather-station/hw-provisioning-service@sha256:a38e6de6cf4ce81937391472c865bdce0cf736a3a661f02ac8c3e9036b33a174
          name: hw-provisioning-service
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: "500m"
              memory: "128Mi"
            requests:
              cpu: "100m"
              memory: "64Mi"
          volumeMounts:
            - name: keys-volume
              mountPath: /keys
              readOnly: true
      volumes:
        - name: keys-volume
          secret:
            secretName: ws-keys
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: provisioning
  name: provisioning-sv
  namespace: weather-app-dev
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: provisioning
  type: ClusterIP
