kubernetes-example/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: weather-app-dev
spec:
  ingressClassName: nginx
  rules:
    - host: api.weather.local
      http:
        paths:
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: apiserver-sv
                port:
                  number: 80
