kubernetes-example/keycloak-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: postgres-kc
  name: postgres-kc
  namespace: weather-app-dev
spec:
  serviceName: postgres-kc-sv
  replicas: 1
  selector:
    matchLabels:
      app: postgres-kc
  template:
    metadata:
      labels:
        app: postgres-kc
    spec:
      containers:
        - image: postgres:18-alpine
          name: postgres-kc
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgres-kc-v
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
  volumeClaimTemplates:
    - metadata:
        name: postgres-kc-v
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-kc-sv
  namespace: weather-app-dev
spec:
  clusterIP: None
  selector:
    app: postgres-kc
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-kc-ingress
  namespace: weather-app-dev
spec:
  podSelector:
    matchLabels:
      app: postgres-kc
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: keycloak
      ports:
        - protocol: TCP
          port: 5432
