kubernetes-example/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keycloak
  name: keycloak
  namespace: weather-app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  strategy: {}
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - image: quay.io/keycloak/keycloak:26.4
          args:
            - start
            - --health-enabled=true
            - --hostname-strict=false
            - --http-enabled=true
          name: keycloak
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-sv
  namespace: weather-app-dev
spec:
  selector:
    app: keycloak
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak-policy
  namespace: weather-app-dev
spec:
  podSelector:
    matchLabels:
      app: keycloak
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres-kc
      ports:
        - protocol: TCP
          port: 5432
