kubernetes-example/migrate-job.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-db-migration-policy
  namespace: weather-app-dev
spec:
  podSelector:
    matchLabels:
      app: postgres-db-migration
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
